--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -29,46 +29,81 @@ body {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
+.order_summary .order_summary_detail_container {
+  position: relative;
+  box-sizing: border-box;
+  margin: 20px;
+}
 .order_summary h1 {
   font-size: x-large;
   font-weight: 900;
   text-align: center;
 }
 .order_summary p {
+  padding: 5px;
   color: var(--clr-neutral-desaturatedblue);
   text-align: center;
   font-weight: 500;
 }
+.order_summary ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 20px;
+  text-align: center;
+}
+.order_summary a {
+  text-decoration: none;
+  font-size: small;
+  font-weight: 900;
+  color: var(--clr-neutral-desaturatedblue);
+}
 .order_summary .order_summary_details {
+  box-sizing: border-box;
+  padding: 10px;
   position: relative;
   left: 50%;
   right: 50%;
-  width: 90%;
+  width: 100%;
   transform: translate(-50%);
   border-radius: 1rem;
   background-color: var(--clr-neutral-verypaleblue);
 }
+.order_summary .order_summary_details ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  vertical-align: middle;
+}
+.order_summary .order_summary_details li {
+  float: left;
+}
+.order_summary .order_summary_details li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  color: var(--clr-primary-brightblue);
+  text-decoration: underline;
+}
+.order_summary .order_summary_details li img {
+  display: block;
+  text-align: center;
+}
 .order_summary .order_summary_details table {
-  height: 100%;
+  display: inline;
+  height: 50%;
   text-align: center;
   width: 100%;
-}
-.order_summary ul {
-  text-align: center;
-  list-style: none;
-  padding: 0px;
+  overflow: hidden;
+  font-size: smaller;
   position: relative;
-  left: 50%;
-  right: 50%;
-  width: 90%;
-  transform: translate(-50%);
+  top: 0px;
+  vertical-align: top;
+  margin-left: 20px;
 }
-.order_summary li {
-  position: relative;
-  left: 50%;
-  right: 50%;
-  width: 100%;
-  transform: translate(-50%);
+.order_summary .order_summary_details td {
+  color: var(--clr-neutral-desaturatedblue);
 }
 .order_summary button#proceed {
   background-color: var(--clr-primary-brightblue);
@@ -79,8 +114,9 @@ body {
   width: 100%;
   height: 3rem;
   margin-bottom: 1rem;
-  font-size: 1rem;
+  font-size: smaller;
   font-weight: 700;
+  box-shadow: 0px 15px 40px rgba(71, 68, 68, 0.5);
 }
 
 /*# sourceMappingURL=main.css.map */
