--- a/styles/scss/components/_order_summary.scss
+++ b/styles/scss/components/_order_summary.scss
@@ -1,7 +1,4 @@
 .order_summary{
-    
-    
-
     width: 325px;
     border-radius: 1rem;
     background-color: white;
@@ -17,59 +14,100 @@
         width: 100%;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
+    }
 
+
+    .order_summary_detail_container{
+        position: relative;
+        box-sizing: border-box;
+        margin: 20px;
+        
 
     }
+
     h1{
         font-size: x-large;
         font-weight: 900;
         text-align: center;
     }
     p{
+        padding: 5px;
         color: var(--clr-neutral-desaturatedblue);
         text-align: center;
         font-weight: 500;
     }
-    
-        
-    .order_summary_details{
-        position: relative;
-        left:50%;
-        right: 50%;
-        width: 90%;
-        transform: translate(-50%);
-        border-radius: 1rem;
-        background-color: var(--clr-neutral-verypaleblue);
 
-        table{
-            
-            height: 100%;
-            text-align: center;
-            width: 100%;
-
-        }
-        
-    }
     ul{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        margin-top: 20px;
         text-align: center;
-        list-style: none;
-        padding: 0px;
-        position: relative;
-        left:50%;
-        right: 50%;
-        width: 90%;
-        transform: translate(-50%);
 
     }
 
-    li{
-        
+    a{
+        text-decoration: none;
+        font-size: small;
+        font-weight: 900;
+        color: var(--clr-neutral-desaturatedblue);
+    }
+      
+    .order_summary_details{
+        box-sizing: border-box;
+        padding: 10px;
         position: relative;
         left:50%;
         right: 50%;
         width: 100%;
         transform: translate(-50%);
+        border-radius: 1rem;
+        background-color: var(--clr-neutral-verypaleblue);
+        
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            vertical-align: middle;
+        }
+        li{
+            float: left;
+        }
+        li a {
+            display: block;
+            text-align: center;
+            padding: 14px 16px;
+            color: var(--clr-primary-brightblue);
+            text-decoration: underline;
+          }
+        li img{
+            display: block;
+            text-align: center;
+            
+        }
+
+        
+        table{
+            display: inline;
+            height: 50%;
+            text-align: center;
+            width: 100%;
+            overflow: hidden;
+            font-size: smaller;
+            position: relative;
+            top: 0px;
+            vertical-align: top;
+            margin-left: 20px;
+
+        }
+        td{
+            color: var(--clr-neutral-desaturatedblue);
+        }
+        
+        
     }
+    
 
     button#proceed{
         background-color: var(--clr-primary-brightblue);
@@ -80,9 +118,10 @@
         width: 100%;
         height: 3rem;
         margin-bottom: 1rem;
-        font-size: 1rem;
+        font-size: smaller;
         font-weight: 700;
-            }
+        box-shadow: 0px 15px 40px rgba(71, 68, 68, 0.5);
+        }
     
     
 }
